--- a/index.html
+++ b/index.html
@@ -30,9 +30,9 @@
                     <li class="email"><i class="fa fa-envelope"></i><a href="mailto: yourname@email.com">lucaswerner@outlook.com.br/a></li>
                     <li class="phone"><i class="fa fa-phone"></i><a href="tel:55 42 99118713">+55 42 99118713</a></li>
                     <li class="website"><i class="fa fa-globe"></i><a href="http://themes.3rdwavemedia.com/website-templates/free-responsive-website-template-for-developers/" target="_blank">portfoliosite.com</a></li>
-                    <li class="facebook"><i class="fa fa-facebook"></i><a href="www.facebook.com/lwerner02" target="_blank">facebook.com/lwerner02</a></li>
-                    <li class="linkedin"><i class="fa fa-linkedin"></i><a href="www.linkedin.com/in/lucaswerner" target="_blank">linkedin.com/in/lucaswerner</a></li>
-                    <li class="github"><i class="fa fa-github"></i><a href="www.github.com/lwerner02" target="_blank">github.com/lwerner02</a></li>
+                    <li class="facebook"><i class="fa fa-facebook"></i><a href="http://www.facebook.com/lwerner02" target="_blank">facebook.com/lwerner02</a></li>
+                    <li class="linkedin"><i class="fa fa-linkedin"></i><a href="http://www.linkedin.com/in/lucaswerner" target="_blank">linkedin.com/in/lucaswerner</a></li>
+                    <li class="github"><i class="fa fa-github"></i><a href="http://www.github.com/lwerner02" target="_blank">github.com/lwerner02</a></li>
                     <li class="twitter"><i class="fa fa-twitter"></i><a href="https://twitter.com/lwerner02" target="_blank">@lwerner02</a></li>
                 </ul>
             </div><!--//contact-container-->
@@ -42,13 +42,8 @@
                     <h4 class="degree">BSc in Computer Engineer</h4>
                     <h5 class="meta">State University of Ponta Grossa</h5>
                     <div class="time">2012 - 2016</div>
-                </div><!--//item-->
-                <!-- <div class="item">
-                    <h4 class="degree">BSc in Applied Mathematics</h4>
-                    <h5 class="meta">Bristol University</h5>
-                    <div class="time">2007 - 2011</div>
-                </div><!--//item-->
-            </div><!--//education-container-->
+                </div>
+            </div>
 
             <div class="languages-container container-block">
                 <h2 class="container-block-title">Languages</h2>
@@ -78,7 +73,7 @@
             <section class="section summary-section">
                 <h2 class="section-title"><i class="fa fa-user"></i>Career Profile</h2>
                 <div class="summary">
-                    <p>Summarise your career here lorem ipsum dolor sit amet, consectetuer adipiscing elit. You can <a href="http://themes.3rdwavemedia.com/website-templates/orbit-free-resume-cv-template-for-developers/" target="_blank">download this free resume/CV template here</a>. Aenean commodo ligula eget dolor aenean massa. Cum sociis natoque penatibus et magnis dis parturient montes, nascetur ridiculus mus. Donec quam felis, ultricies nec, pellentesque eu.</p>
+                    <p>Have experience with web developer, desktop application, arduino and wearable technology, love to learn new things, and create things that impact people, believe in actuation of population, voluntary in CodeForPG an OpenBrazil brigade.</p>
                 </div><!--//summary-->
             </section><!--//section-->
 
