--- a/index.html
+++ b/index.html
@@ -27,9 +27,9 @@
 
             <div class="contact-container container-block">
                 <ul class="list-unstyled contact-list">
-                    <li class="email"><i class="fa fa-envelope"></i><a href="mailto: yourname@email.com">lucaswerner@outlook.com.br/a></li>
+                    <li class="email"><i class="fa fa-envelope"></i><a href="mailto: yourname@email.com">lucaswerner@outlook.com.br</a></li>
                     <li class="phone"><i class="fa fa-phone"></i><a href="tel:55 42 99118713">+55 42 99118713</a></li>
-                    <li class="website"><i class="fa fa-globe"></i><a href="http://themes.3rdwavemedia.com/website-templates/free-responsive-website-template-for-developers/" target="_blank">portfoliosite.com</a></li>
+                    <!-- <li class="website"><i class="fa fa-globe"></i><a href="http://lucasvieirawerner.github.io/" target="_blank">lucasvieirawerner.github.io</a></li> -->
                     <li class="facebook"><i class="fa fa-facebook"></i><a href="http://www.facebook.com/lwerner02" target="_blank">facebook.com/lwerner02</a></li>
                     <li class="linkedin"><i class="fa fa-linkedin"></i><a href="http://www.linkedin.com/in/lucaswerner" target="_blank">linkedin.com/in/lucaswerner</a></li>
                     <li class="github"><i class="fa fa-github"></i><a href="http://www.github.com/lwerner02" target="_blank">github.com/lwerner02</a></li>
@@ -148,29 +148,28 @@
 
             </section><!--//section-->
 
-            <section class="section projects-section">
+            <!-- <section class="section projects-section">
                 <h2 class="section-title"><i class="fa fa-archive"></i>Projects</h2>
                 <div class="intro">
                     <p>You can list your side projects or open source libraries in this section. Lorem ipsum dolor sit amet, consectetur adipiscing elit. Vestibulum et ligula in nunc bibendum fringilla a eu lectus.</p>
-                </div><!--//intro-->
+                </div>
                 <div class="item">
                     <span class="project-title"><a href="#hook">Velocity</a></span> - <span class="project-tagline">A responsive website template designed to help startups promote, market and sell their products.</span>
-
-                </div><!--//item-->
+                </div>
                 <div class="item">
                     <span class="project-title"><a href="http://themes.3rdwavemedia.com/website-templates/responsive-bootstrap-theme-web-development-agencies-devstudio/" target="_blank">DevStudio</a></span> -
                     <span class="project-tagline">A responsive website template designed to help web developers/designers market their services. </span>
-                </div><!--//item-->
+                </div>
                 <div class="item">
                     <span class="project-title"><a href="http://themes.3rdwavemedia.com/website-templates/responsive-bootstrap-theme-for-startups-tempo/" target="_blank">Tempo</a></span> - <span class="project-tagline">A responsive website template designed to help startups promote their products or services and to attract users &amp; investors</span>
-                </div><!--//item-->
+                </div>
                 <div class="item">
                     <span class="project-title"><a href="hhttp://themes.3rdwavemedia.com/website-templates/responsive-bootstrap-theme-mobile-apps-atom/" target="_blank">Atom</a></span> - <span class="project-tagline">A comprehensive website template solution for startups/developers to market their mobile apps. </span>
-                </div><!--//item-->
+                </div>
                 <div class="item">
                     <span class="project-title"><a href="http://themes.3rdwavemedia.com/website-templates/responsive-bootstrap-theme-for-mobile-apps-delta/" target="_blank">Delta</a></span> - <span class="project-tagline">A responsive Bootstrap one page theme designed to help app developers promote their mobile apps</span>
-                </div><!--//item-->
-            </section><!--//section-->
+                </div>
+            </section> -->
 
             <section class="skills-section section">
                 <h2 class="section-title"><i class="fa fa-rocket"></i>Skills &amp; Proficiency</h2>
