--- a/index.html
+++ b/index.html
@@ -177,78 +177,82 @@
                     <div class="item">
                         <h3 class="level-title">PHP</h3>
                         <div class="level-bar">
-                            <div class="level-bar-inner" data-level="95%">
-                            </div>
-                        </div>
-                    </div>
-                    <div class="item">
-                        <h3 class="level-title"> Laravel</h3>
-                        <div class="level-bar">
                             <div class="level-bar-inner" data-level="85%">
                             </div>
                         </div>
                     </div>
                     <div class="item">
-                        <h3 class="level-title">Javascript &amp; jQuery</h3>
+                        <h3 class="level-title">Java</h3>
                         <div class="level-bar">
-                            <div class="level-bar-inner" data-level="90%">
+                            <div class="level-bar-inner" data-level="80%">
                             </div>
                         </div><!--//level-bar-->
                     </div><!--//item-->
-
-                    <div class="item">
-                        <h3 class="level-title">Angular</h3>
-                        <div class="level-bar">
-                            <div class="level-bar-inner" data-level="60%">
-                            </div>
-                        </div>
-                    </div>
 
                     <div class="item">
                         <h3 class="level-title">HTML5 &amp; CSS</h3>
                         <div class="level-bar">
-                            <div class="level-bar-inner" data-level="95%">
+                            <div class="level-bar-inner" data-level="80%">
                             </div>
                         </div><!--//level-bar-->
                     </div><!--//item-->
-
                     <div class="item">
-                        <h3 class="level-title">Java</h3>
+                        <h3 class="level-title"> Laravel</h3>
                         <div class="level-bar">
-                            <div class="level-bar-inner" data-level="85%">
+                            <div class="level-bar-inner" data-level="78%">
+                            </div>
+                        </div>
+                    </div>
+                    <div class="item">
+                        <h3 class="level-title">GNU/Linux</h3>
+                        <div class="level-bar">
+                            <div class="level-bar-inner" data-level="77%">
                             </div>
                         </div><!--//level-bar-->
                     </div><!--//item-->
-
+                    <div class="item">
+                        <h3 class="level-title">Javascript &amp; jQuery</h3>
+                        <div class="level-bar">
+                            <div class="level-bar-inner" data-level="76%">
+                            </div>
+                        </div><!--//level-bar-->
+                    </div><!--//item-->
+                    <div class="item">
+                        <h3 class="level-title">Gimp</h3>
+                        <div class="level-bar">
+                            <div class="level-bar-inner" data-level="75%">
+                            </div>
+                        </div><!--//level-bar-->
+                    </div><!--//item-->
                     <div class="item">
                         <h3 class="level-title">Arduino</h3>
                         <div class="level-bar">
-                            <div class="level-bar-inner" data-level="85%">
-                            </div>
-                        </div><!--//level-bar-->
-                    </div><!--//item-->
-
-                    <div class="item">
-                        <h3 class="level-title">GIMP</h3>
-                        <div class="level-bar">
-                            <div class="level-bar-inner" data-level="85%">
-                            </div>
-                        </div><!--//level-bar-->
-                    </div><!--//item-->
-                    <div class="item">
-                        <h3 class="level-title">Linux</h3>
-                        <div class="level-bar">
-                            <div class="level-bar-inner" data-level="90%">
+                            <div class="level-bar-inner" data-level="75%">
                             </div>
                         </div><!--//level-bar-->
                     </div><!--//item-->
                     <div class="item">
                         <h3 class="level-title">OracleSQL, Mysql  &amp;  Sybase</h3>
                         <div class="level-bar">
-                            <div class="level-bar-inner" data-level="80%">
+                            <div class="level-bar-inner" data-level="75%">
                             </div>
                         </div><!--//level-bar-->
                     </div><!--//item-->
+
+
+
+
+                    <div class="item">
+                        <h3 class="level-title">Angular</h3>
+                        <div class="level-bar">
+                            <div class="level-bar-inner" data-level="45%">
+                            </div>
+                        </div>
+                    </div>
+
+
+
+
 
                 </div>
             </section><!--//skills-section-->
