--- a/index.html
+++ b/index.html
@@ -32,7 +32,7 @@
                     <!-- <li class="website"><i class="fa fa-globe"></i><a href="http://lucasvieirawerner.github.io/" target="_blank">lucasvieirawerner.github.io</a></li> -->
                     <li class="facebook"><i class="fa fa-facebook"></i><a href="http://www.facebook.com/lwerner02" target="_blank">facebook.com/lwerner02</a></li>
                     <li class="linkedin"><i class="fa fa-linkedin"></i><a href="http://www.linkedin.com/in/lucaswerner" target="_blank">linkedin.com/in/lucaswerner</a></li>
-                    <li class="github"><i class="fa fa-github"></i><a href="http://www.github.com/lwerner02" target="_blank">github.com/lwerner02</a></li>
+                    <li class="github"><i class="fa fa-github"></i><a href="http://www.github.com/lucasvieirawerner" target="_blank">github.com/lucasvieirawerner</a></li>
                     <li class="twitter"><i class="fa fa-twitter"></i><a href="https://twitter.com/lwerner02" target="_blank">@lwerner02</a></li>
                 </ul>
             </div><!--//contact-container-->
