--- a/index.html
+++ b/index.html
@@ -239,7 +239,13 @@
                         </div><!--//level-bar-->
                     </div><!--//item-->
 
-
+                    <div class="item">
+                        <h3 class="level-title">Angular</h3>
+                        <div class="level-bar">
+                            <div class="level-bar-inner" data-level="45%">
+                            </div>
+                        </div>
+                    </div>
 
 
                     <div class="item">
