--- a/index.html
+++ b/index.html
@@ -188,11 +188,19 @@
                             </div>
                         </div><!--//level-bar-->
                     </div><!--//item-->
-
+                    
+                    <div class="item">
+                        <h3 class="level-title">Python</h3>
+                        <div class="level-bar">
+                            <div class="level-bar-inner" data-level="79%">
+                            </div>
+                        </div>
+                    </div>
+                    
                     <div class="item">
                         <h3 class="level-title">HTML5 &amp; CSS</h3>
                         <div class="level-bar">
-                            <div class="level-bar-inner" data-level="80%">
+                            <div class="level-bar-inner" data-level="79%">
                             </div>
                         </div><!--//level-bar-->
                     </div><!--//item-->
@@ -239,13 +247,6 @@
                         </div><!--//level-bar-->
                     </div><!--//item-->
 
-                    <div class="item">
-                        <h3 class="level-title">Angular</h3>
-                        <div class="level-bar">
-                            <div class="level-bar-inner" data-level="60%">
-                            </div>
-                        </div>
-                    </div>
 
 
                     <div class="item">
