--- a/index.html
+++ b/index.html
@@ -39,9 +39,14 @@
             <div class="education-container container-block">
                 <h2 class="container-block-title">Education</h2>
                 <div class="item">
-                    <h4 class="degree">BSc in Computer Engineer</h4>
+                    <h4 class="degree">Bachelor in Computer Engineer</h4>
                     <h5 class="meta">State University of Ponta Grossa</h5>
                     <div class="time">2012 - 2016</div>
+                </div>
+                <div class="item">
+                    <h4 class="degree">MSc in biomedical engineering</h4>
+                    <h5 class="meta">Federal Technological University of Paraná</h5>
+                    <div class="time">2017 - 2019</div>
                 </div>
             </div>
 
@@ -79,25 +84,35 @@
 
             <section class="section experiences-section">
                 <h2 class="section-title"><i class="fa fa-briefcase"></i>Experiences</h2>
-
                 <div class="item">
                     <div class="meta">
                         <div class="upper-row">
-                            <h3 class="job-title">Managing director & Developer - EJEC</h3>
-                            <div class="time">Sep 2014 - Present</div>
+                            <h3 class="job-title">Co-founder - StillGood</h3>
+                            <div class="time">Sep 2016 - Present</div>
+                        </div><!--//upper-row-->
+                        <div class="company">Curitiba, PR - BR</div>
+                    </div><!--//meta-->
+                    <div class="details">
+                        <p></p>
+                    </div><!--//details-->
+                </div>
+                <div class="item">
+                    <div class="meta">
+                        <div class="upper-row">
+                            <h3 class="job-title">Web Developer - Geovoxel</h3>
+                            <div class="time">Sep 2016 - Dec 2016</div>
                         </div><!--//upper-row-->
                         <div class="company">Ponta Grossa, PR - BR</div>
                     </div><!--//meta-->
                     <div class="details">
-                        <p>project coordination, web solutions based on PHP, Laravel, MySQL and Twitter Bootstrap</p>
+                        <p>web development using Django for Back-end, Angular, JQuery and Twitter Bootstrap for Front-End</p>
                     </div><!--//details-->
-                </div><!--//item-->
-
+                </div>
                 <div class="item">
                     <div class="meta">
                         <div class="upper-row">
                             <h3 class="job-title">Web Developer - STATE UNIVERSITY OF PONTA GROSSA</h3>
-                            <div class="time">Mar 2016 - Present</div>
+                            <div class="time">Mar 2016 - Aug 2016</div>
                         </div><!--//upper-row-->
                         <div class="company">Ponta Grossa, PR - BR</div>
                     </div><!--//meta-->
@@ -118,7 +133,20 @@
                         <p>In the innovation sector, working on developing new tools for IoT based on Java, PL / SQL Oracle, and Radio Frequency Identification (RFID)</p>
                     </div><!--//details-->
                 </div><!--//item-->
-
+                
+                <div class="item">
+                    <div class="meta">
+                        <div class="upper-row">
+                            <h3 class="job-title">Managing director & Developer - EJEC</h3>
+                            <div class="time">Sep 2014 - Aug 2016</div>
+                        </div><!--//upper-row-->
+                        <div class="company">Ponta Grossa, PR - BR</div>
+                    </div><!--//meta-->
+                    <div class="details">
+                        <p>project coordination, web solutions based on PHP, Laravel, MySQL and Twitter Bootstrap</p>
+                    </div><!--//details-->
+                </div><!--//item-->
+                
                 <div class="item">
                     <div class="meta">
                         <div class="upper-row">
