--- a/index.html
+++ b/index.html
@@ -102,7 +102,7 @@
                             <h3 class="job-title">Web Developer - Geovoxel</h3>
                             <div class="time">Sep 2016 - Dec 2016</div>
                         </div><!--//upper-row-->
-                        <div class="company">Ponta Grossa, PR - BR</div>
+                        <div class="company">Home Office</div>
                     </div><!--//meta-->
                     <div class="details">
                         <p>web development using Django for Back-end, Angular, JQuery and Twitter Bootstrap for Front-End</p>
