--- a/index.html
+++ b/index.html
@@ -791,9 +791,8 @@ href="https://cdn.rawgit.com/IonicaBizau/github-calendar/gh-pages/dist/github-ca
                   
                         <h4 class="h06">Address</h4>
                         <p>
-                        2313 Engenheiros Rebouças, AP7<br>
                         Curitiba, PR<br>
-                        80230040 BR
+                        Brazil
                         </p>
                     </div>
 
