--- a/index.html
+++ b/index.html
@@ -71,9 +71,8 @@
                 <h3>$_"Hello World!"</h3>
 
                 <h1>
-                    I am Lucas Vieira Werner. <br>
-                    I am a Software Engineer, <br>
-                    based in Brazil.
+                    I'm Lucas Vieira Werner,<br> a Software Engineer,<br> 
+based in Brazil.
                 </h1>
 
                 <div class="home-content__buttons">
@@ -124,13 +123,14 @@
         <div class="row narrow section-intro has-bottom-sep">
             <div class="col-full text-center">
                 <h3>About</h3>
-                <h1>Let me introduce myself.</h1>
+                <h1>
+                    Let me introduce myself!</h1>
                 <br>
                 <div class="col-three tab-full contact__infos">
                 <img src="images/profile-pic.png" alt="Profile Picture">
             </div>
             <div class="col-nine tab-full contact__infos">
-                <p class="lead">I Have experience with web developing, desktop application, arduino and wearable,I love to learn new things, and create things that impact people and i'm always trying to improve my skills. I'm open to listen and develop innovative ideas with teamwork to achieve the goals, whether personal or professional.</p>
+                <p class="lead">I love to learn and create new things that have impact on people and I'm always trying to improve my skills. I'm open to be part of and develop innovative ideas with teamwork, in order to achieve any goals, whether personal or professional ones. </p>
             </div></div>
         </div>
 
@@ -159,7 +159,7 @@
                             <a href="mailto:contact@lucasvieirawerner.com" target="_top">contact@lucasvieirawerner.com</a>
                             <br><br>
                             <strong>Hobbies:</strong><br>
-                            <span>Soccer, listening to music, watching film</span>
+                            <span>Soccer, listen to music, watch movies.</span>
                             <br>
         
                 </div>
@@ -270,10 +270,10 @@
                         <div class="timeline__header">
                             <p class="timeline__timeframe">Mar 2016 - Aug 2016</p>
                             <h3>State University of Ponta Grossa</h3>
-                            <h5>Web development intern</h5>
+                            <h5>Web Development Intern</h5>
                         </div>
                         <div class="timeline__desc">	
-                            <p>System of management of agreements between the university and external agents.
+                            <p> System of management of agreements between the University and external agents. 
                                 Technologies: Laravel, Angular, JQuery, Twitter Bootstrap and Sybase.</p>
                         </div>
                     </div> <!-- end timeline__block -->
@@ -282,7 +282,7 @@
                         <div class="timeline__header">
                             <p class="timeline__timeframe">Sep 2014 - Aug 2016</p>
                             <h3>Junior computer engineering company - EJEC</h3>
-                            <h5>co founder and managing director</h5>
+                            <h5>Co-Founder and Managing Director</h5>
                         </div>
                         <div class="timeline__desc">
                             <p>Coordination of projects, team management, customer meetings and development.
@@ -364,7 +364,7 @@
         <div class="row narrow section-intro has-bottom-sep">
             <div class="col-full">
                 <h3>Portfolio</h3>
-                <h1>Check Out Some of My Works.</h1>
+                <h1>Check Out Some of My Works!</h1>
             </div>
         </div>
 
@@ -767,8 +767,8 @@ href="https://cdn.rawgit.com/IonicaBizau/github-calendar/gh-pages/dist/github-ca
         <div class="row narrow section-intro">
             <div class="col-full">
                 <h3>Contact</h3>
-                <h1>I'd Love To Hear From You.</h1>
-                <p class="lead">Please feel free contact me at social media, e-mail or phone call!</p>
+                <h1>I'd Love To Hear From You!</h1>
+                <p class="lead">Please, feel free to contact me at social media, e-mail or phone call!</p>
             </div>
         </div>
 
