--- a/index.html
+++ b/index.html
@@ -332,7 +332,7 @@ based in Brazil.
                         <div class="timeline__bullet"></div>
                         <div class="timeline__header">
                             <p class="timeline__timeframe">2017 - Present</p>
-                            <h3>Junior computer engineering company - EJEC</h3>
+                            <h3>Master Degree</h3>
                             <h5>Paraná Federal University - Curitiba campus</h5>
                         </div>
                         <div class="timeline__desc">
