--- a/index.html
+++ b/index.html
@@ -791,7 +791,7 @@ href="https://cdn.rawgit.com/IonicaBizau/github-calendar/gh-pages/dist/github-ca
                   
                         <h4 class="h06">Address</h4>
                         <p>
-                        Curitiba, PR<br>
+                        Florianópolis, SC<br>
                         Brazil
                         </p>
                     </div>
