--- a/index.html
+++ b/index.html
@@ -71,7 +71,7 @@
                 <h3>$_"Hello World!"</h3>
 
                 <h1>
-                    I'm Lucas Vieira Werner,<br> a Software Engineer,<br> 
+                    I'm Lucas Vieira Werner,<br> a Computer Engineer,<br> 
 based in Brazil.
                 </h1>
 
@@ -153,10 +153,10 @@ based in Brazil.
                             <span>Web Developer, Freelancer, Student</span>
                             <br><br>
                             <strong>Website:</strong><br>
-                            <a href="/">www.lucasvieirawerner.com</a>
+                            <a href="/">http://lucasvieirawerner.github.io/</a>
                             <br><br>
                             <strong>Email:</strong><br>
-                            <a href="mailto:contact@lucasvieirawerner.com" target="_top">contact@lucasvieirawerner.com</a>
+                            <a href="mailto:lucas@wellbe.co" target="_top">lucas@wellbe.co</a>
                             <br><br>
                             <strong>Hobbies:</strong><br>
                             <span>Soccer, listen to music, watch movies.</span>
@@ -331,7 +331,7 @@ based in Brazil.
                     <div class="timeline__block">
                         <div class="timeline__bullet"></div>
                         <div class="timeline__header">
-                            <p class="timeline__timeframe">2017 - Present</p>
+                            <p class="timeline__timeframe">2017 - 2019</p>
                             <h3>Master Degree</h3>
                             <h5>Paraná Federal University - Curitiba campus</h5>
                         </div>
@@ -782,7 +782,7 @@ href="https://cdn.rawgit.com/IonicaBizau/github-calendar/gh-pages/dist/github-ca
             <div class="col-four tab-full contact__infos">
 
                     <h4 class="h06">Email</h4>
-                    <p>contact@lucasvieirawerner.com<br>
+                    <p>lucas@wellbe.co<br>
                     lucaswerner@outlook.com.br
                     </p>
     
