--- a/index.html
+++ b/index.html
@@ -102,13 +102,13 @@ based in Brazil.
                         <a href="https://github.com/lucasvieirawerner"><i class="im im-github" aria-hidden="true"></i><span>GitHub</span></a>
                     </li>
             <li>
-                <a href="https://www.facebook.com/lwerner02"><i class="im im-facebook" aria-hidden="true"></i><span>Facebook</span></a>
+                <a href="https://www.facebook.com/lucasvieirawerner"><i class="im im-facebook" aria-hidden="true"></i><span>Facebook</span></a>
             </li>
             <li>
                 <a href="https://twitter.com/LWerner02"><i class="im im-twitter" aria-hidden="true"></i><span>Twiiter</span></a>
             </li>
             <li>
-                <a href="https://www.instagram.com/lwerner02/"><i class="im im-instagram" aria-hidden="true"></i><span>Instagram</span></a>
+                <a href="https://www.instagram.com/lucasvieirawerner"><i class="im im-instagram" aria-hidden="true"></i><span>Instagram</span></a>
             </li>
         </ul> 
         <!-- end home-social -->
@@ -820,7 +820,7 @@ href="https://cdn.rawgit.com/IonicaBizau/github-calendar/gh-pages/dist/github-ca
                                 <i class="im im-linkedin" aria-hidden="true"></i>
                                 <span>Linkedin</span>
                             </a></li>
-                    <li><a href="https://www.facebook.com/lwerner02">
+                    <li><a href="https://www.facebook.com/lucasvieirawerner">
                         <i class="im im-facebook" aria-hidden="true"></i>
                         <span>Facebook</span>
                     </a></li>
@@ -828,7 +828,7 @@ href="https://cdn.rawgit.com/IonicaBizau/github-calendar/gh-pages/dist/github-ca
                         <i class="im im-twitter" aria-hidden="true"></i>
                         <span>Twitter</span>
                     </a></li>
-                    <li><a href="https://www.instagram.com/lwerner02/">
+                    <li><a href="https://www.instagram.com/lucasvieirawerner">
                         <i class="im im-instagram" aria-hidden="true"></i>
                         <span>Instagram</span>
                     </a></li>
