--- a/index.html
+++ b/index.html
@@ -96,7 +96,7 @@ based in Brazil.
 
         <ul class="home-social">
                                 <li>
-                        <a href="https://www.linkedin.com/in/lucaswerner/"><i class="im im-linkedin" aria-hidden="true"></i><span>Linkedin</span></a>
+                        <a href="https://www.linkedin.com/in/lucasvieirawerner/"><i class="im im-linkedin" aria-hidden="true"></i><span>Linkedin</span></a>
                     </li>
                     <li>
                         <a href="https://github.com/lucasvieirawerner"><i class="im im-github" aria-hidden="true"></i><span>GitHub</span></a>
@@ -765,15 +765,9 @@ href="https://cdn.rawgit.com/IonicaBizau/github-calendar/gh-pages/dist/github-ca
 
         <div class="row contact__main">
             <div class="col-four tab-full contact__infos">
-                <h4 class="h06">Phone</h4>
-                <p>Mobile: (+55) 42 999118713<br>
-                </p>
-
-            </div>
-            <div class="col-four tab-full contact__infos">
 
                     <h4 class="h06">Email</h4>
-                    <p>lucas@wellbe.co<br>
+                    <p>
                     lucaswerner@outlook.com.br
                     </p>
     
@@ -782,7 +776,7 @@ href="https://cdn.rawgit.com/IonicaBizau/github-calendar/gh-pages/dist/github-ca
                   
                         <h4 class="h06">Address</h4>
                         <p>
-                        Florianópolis, SC<br>
+                        Curitiba, PR<br>
                         Brazil
                         </p>
                     </div>
